style.css
.navbar {
  display: flex;
  width: 100%;
  height: 100px;
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
}

#navbar-heading {
  font-size: 30px;
}

#navbar-right-side {
  display: flex;
  flex-direction: column;
  width: 50%;
}

#navbar-details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  height: 100%;
}

#navbar-address {
  font-weight: 300;
}

#navbar-social-media {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  width: 100%;
  height: 50%;
}

#navbar-links {
  display: flex;
  align-items: flex-start;
  justify-content: flex-end;
  width: 100%;
}

ul {
  margin: 0;
}

.navbar-link, .navbar-sm-icon {
  display: inline;
  list-style-type: none;
}

.navbar-link {
  font-size: 23px;
  margin-right: 10px;
}

